<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:padding="32dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/etName"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_photo"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:background="@drawable/text_background"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etPalindrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etName"
        android:padding="10dp"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:background="@drawable/text_background"
        android:autofillHints="name" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPalindrome"
        android:text="@string/check"
        android:theme="@style/ButtonTheme"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCheck"
        android:text="@string/next"
        android:theme="@style/ButtonTheme"
        android:layout_marginTop="10dp"/>

</RelativeLayout>